--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="defaulttimeout">120</string>
     <string name="seconds">seconds</string>
     <string name="userlist">Users</string>
-    <string name="adduser">Add</string>
+    <string name="adduser">Add User</string>
     <string name="button_startsession">Start Session</string>
     <string name="adduser_helptext">Please tell us, who will be there in this session! Take care of the sitting order!</string>
     <string name="error_empty_user_list">Please add at least one player, before starting the session!</string>
