Added Android support library and JakeWharton's ViewPagerIndicator

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="hello">Hello World, main!</string>
     <string name="app_name">Shisha Manager</string>
     <string name="newsession">New Session</string>
@@ -35,4 +36,8 @@
     <string name="sharetext">Text to share:</string>
     <string name="addchart">Add chart as Image</string>
     <string name="textshareDefault">I\'ve just had a great time with my friends and with my shisha!</string>
+    <string name="title_activity_summary">SummaryActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
