--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,4 +40,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
 
+    <string-array name="titlePageIndicatorTitles">
+        <item>@string/statistics</item>
+        <item>@string/usageRounds</item>
+        <item>@string/share</item>
+    </string-array>
+
 </resources>
